<resources>
    <string name="app_name">ScorocodeTemplate</string>
    <string name="login_activity_email_label">Email:</string>
    <string name="login_activity_email_edittext">Enter login</string>
    <string name="login_activity_password_label">Password:</string>
    <string name="login_activity_password_edittext">Enter password</string>
    <string name="login_activity_button_login">Login</string>
    <string name="login_activity_button_register">Register</string>
    <string name="wrong_data_error">Check data</string>
    <string name="cant_login">Can\'t perform login action</string>
    <string name="appKey">305ffd6cc32832f6819bf4e4f4707848</string>
    <string name="clientKey">962066371eefc0d1850a76c7ab14c1dc</string>
    <string name="masterKey">383499df2748bb4560745d5da67f5e41</string>
    <string name="documents">Documents:</string>
    <string name="documentName">DocumentName:</string>
    <string name="documentId">Document id:</string>
    <string name="collectionName">scorocodetemplate</string>
    <string name="errorDuringDocumentLoading">Can\'t load document list</string>
    <string name="addDocument">Add document</string>
    <string name="login_activity_password_repeat_edittext">Repeat password</string>
    <string name="login_activity_repeat_password_label">Repeat password</string>
    <string name="login_activity_user_name_label">User name:</string>
    <string name="login_activity_user_name_edittext">Enter user name</string>
    <string name="errorDuringRegister">Error during register process.</string>
    <string name="notMatchPasswords">Passwords are not match</string>
    <string name="documentContent">Document content:</string>
    <string name="documentComment">Document comment:</string>
    <string name="add_new_document">Add new document</string>
    <string name="enter_document_name">Enter document name</string>
    <string name="enter_document_content">Enter document content</string>
    <string name="enter_document_comment">Enter document comment</string>
    <string name="documentNameField">documentName</string>
    <string name="documentContentField">documentContent</string>
    <string name="documentCommentField">documentComment</string>
    <string name="document_saved">Document saved successful</string>
    <string name="error_during_document_saving">Error during saving</string>
    <string name="will_be_created_automatically">Will be created automatically</string>
    <string name="choose_action">Choose action</string>
    <string name="open_document">Open document</string>
    <string name="edit_document">Edit document</string>
    <string name="remove_document">Remove document</string>
    <string name="decument_removed">Document removed successful</string>
    <string name="error_during_doc_removal">Error during document removal</string>
    <string name="close_action">Close</string>
    <string name="continue_action">Continue</string>
    <string name="no_item_selected">No item selected</string>
    <string name="change_document_info">Change</string>
</resources>
