<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.scorocode.scorocodetemplate.ru.scorocode.scorocodetemplate.activities.DocumentActivity">

        <TextView
            style="@style/labelStyle"
            android:layout_marginTop="@dimen/addNewDocumentItemsMargin"
            android:text="@string/documentId" />

        <EditText
            android:id="@+id/etDocumentId"
            style="@style/editTextStyle"
            android:enabled="false"
            android:hint="@string/will_be_created_automatically" />

        <TextView
            style="@style/labelStyle"
            android:layout_marginTop="@dimen/addNewDocumentItemsMargin"
            android:text="@string/documentName" />

        <EditText
            android:id="@+id/etDocumentName"
            style="@style/editTextStyle"
            android:hint="@string/enter_document_name" />

        <TextView
            style="@style/labelStyle"
            android:layout_marginTop="@dimen/addNewDocumentItemsMargin"
            android:text="@string/documentContent" />

        <EditText
            android:id="@+id/etDocumentContent"
            style="@style/editTextStyle"
            android:hint="@string/enter_document_content"
            android:singleLine="false" />

        <TextView
            style="@style/labelStyle"
            android:layout_marginTop="@dimen/addNewDocumentItemsMargin"
            android:text="@string/documentComment" />

        <EditText
            android:id="@+id/etDocumentComment"
            style="@style/editTextStyle"
            android:hint="@string/enter_document_comment" />

        <Button
            android:id="@+id/btnAddDocument"
            style="@style/button"
            android:layout_marginTop="16dp"
            android:text="@string/add_new_document" />

    </LinearLayout>

</ScrollView>