<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.peterstaranchuk.scorocodetemplate.LoginActivity">

    <TextView
        android:text="@string/login_activity_email_label"
        style="@style/labelStyle" />

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/login_activity_email_edittext"
        style="@style/editTextStyle" />

    <TextView
        android:layout_marginTop="24dp"
        style="@style/labelStyle"
        android:text="@string/login_activity_password_label" />

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/login_activity_password_edittext"
        android:inputType="textPassword"
        style="@style/editTextStyle" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="16dp"
        android:text="@string/login_activity_button_login"
        style="@style/button" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_marginTop="8dp"
        android:text="@string/login_activity_button_register"
        style="@style/button" />

</LinearLayout>
