<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/rgChooseItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_document" />

        <RadioButton
            android:id="@+id/rbEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_document" />

        <RadioButton
            android:id="@+id/rbRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_document" />

    </RadioGroup>
</LinearLayout>